@@ -11,6 +11,16 @@
     }
   }
 
+  .last-commit {
+    max-width: 506px;
+
+    .last-commit-content {
+      @include str-truncated;
+      width: calc(100% - 140px);
+      margin-left: 3px;
+    }
+  }
+
   .tree-table {
     margin-bottom: 0;
 
