@@ -5,16 +5,17 @@
         %tr
           %th Name
           %th Last Update
-          %th.hidden-xs
-            .pull-left Last Commit
-            .last-commit.hidden-sm.pull-left
-              &nbsp;
+          %th.hidden-xs.last-commit
+            Last Commit
+            .last-commit-content.hidden-sm
               %i.fa.fa-angle-right
               &nbsp;
               %small.light
                 = link_to @commit.short_id, namespace_project_commit_path(@project.namespace, @project, @commit), class: "monospace"
                 &ndash;
-                = truncate(@commit.title, length: 50)
+                = time_ago_with_tooltip(@commit.committed_date)
+                &ndash;
+                = @commit.full_title
             = link_to 'History', namespace_project_commits_path(@project.namespace, @project, @id), class: 'pull-right'
 
       - if @path.present?
